# PhysML

./: .gitignore  ML_framework_demo.ipynb  README.md  __init__.py  dev_seb.ipynb  pyproject.toml  requirements.txt
conda/: phys_ml.yml
configs/: confmod_auto_encoder.json
notebooks/vertex/: cor_mat_vertex24x6_.npy  dev_seb.ipynb  dev_vsc.ipynb  eval_info.pkl  eval_info_test.pkl  vsc_results.ipynb
notebooks/vertex/.ipynb_checkpoints/: vsc_results-checkpoint.ipynb
notebooks/vertex/01_full_training/: phase_classification_results.pkl  v24x6_vertex_corr.npy
notebooks/vertex/02_training_size/: eval_info.pkl
notebooks/vertex/03_latent_dim_size/: eval_info.pkl
phys_ml/analysis/vertex/: __init__.py  phase_classification.py
phys_ml/config/: base.py  vertex.py
phys_ml/evaluation/: vertex.py
phys_ml/evaluation/.ipynb_checkpoints/: vertex-checkpoint.py
phys_ml/load_data/: base.py  vertex.py
phys_ml/metrics/: __init__.py  base_metrics.py  vertex.py
phys_ml/models/: base.py  vertex.py
phys_ml/trainer/: __init__.py  base.py  vertex.py
phys_ml/trainer/.ipynb_checkpoints/: base-checkpoint.py
phys_ml/util/: slurm_generate.py
phys_ml/visualization/: vertex_visualization.py
phys_ml/wrapper/: base.py  vertex.py
slurm/vertex/: vsc_test.slrm
slurm/vertex_24x6/: vsc_test.slrm
train_scripts/vertex/: train_vertex.py
train_scripts/vertex_24x6/: train_vsc_test.py
